Documentacion de appointment + auth de appointment
