# cmd/main.go
@@ -2,8 +2,10 @@ package main
 
 import (
 	"fmt"
-	"github.com/10Daniel10/web-server-go-ExamenFinal/internal/appointment"
 	"net/http"
+
+	"github.com/10Daniel10/web-server-go-ExamenFinal/docs"
+	"github.com/10Daniel10/web-server-go-ExamenFinal/internal/appointment"
 
 	"github.com/10Daniel10/web-server-go-ExamenFinal/cmd/server/config"
 	"github.com/10Daniel10/web-server-go-ExamenFinal/cmd/server/external/database"
@@ -13,6 +15,8 @@ import (
 	"github.com/10Daniel10/web-server-go-ExamenFinal/internal/patient"
 	"github.com/gin-gonic/gin"
 	"github.com/joho/godotenv"
+	swaggerFiles "github.com/swaggo/files"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 //	@title			Dental Clinic API
@@ -24,6 +28,16 @@ import (
 // @tag.description Patient operations for managing Patient
 // @tag.docs.url http://swagger.io/terms/
 // @tag.docs.description Patient operations for managing Patient
+
+// @tag.name	Dentist
+// @tag.description Dentist operations for managing Dentist
+// @tag.docs.url http://swagger.io/terms/
+// @tag.docs.description Dentist operations for managing Dentist
+
+// @tag.name	Appointment
+// @tag.description Appointment operations for managing Appointment
+// @tag.docs.url http://swagger.io/terms/
+// @tag.docs.description Appointment operations for managing Appointment
 
 //	@accept		json
 //	@produce	json
@@ -37,10 +51,10 @@ import (
 //	@license.name	Apache 2.0
 //	@license.url	http://www.apache.org/licenses/LICENSE-2.0.html
 
-//	@securityDefinitions.apikey	Bearer
+//	@securityDefinitions.apikey	APIKey
 //	@in							header
-//	@name						Authorization
-//	@description				Add Bearer token here, like this: Bearer {token}
+//	@name						SECRET_KEY
+//	@description				Add secret key here
 
 // @externalDocs.description	OpenAPI
 // @externalDocs.url			https://swagger.io/resources/open-api/
@@ -111,8 +125,11 @@ func main() {
 	//Auth middleware
 	authKeys := middleware.NewAuthKeys(envConfig.Private.SecretKey, envConfig.Public.PubKey)
 
-	_ = baseGroup.Group("/docs")
+	docsGroup := baseGroup.Group("/docs")
 	{
+		docs.SwaggerInfo.Host = envConfig.Private.Host
+		docs.SwaggerInfo.BasePath = envConfig.Private.BasePath
+		docsGroup.GET("/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	}
 
 	dentistGroup := baseGroup.Group("/dentists")
@@ -133,10 +150,10 @@ func main() {
 		patientGroup.GET("", patientController.GetAll)
 		patientGroup.GET("/q", patientController.GetByDNI)
 		patientGroup.GET("/:id", patientController.GetById)
-		patientGroup.POST("", patientController.Create)
-		patientGroup.PUT("/:id", patientController.Update)
-		patientGroup.PATCH("/:id", patientController.Patch)
-		patientGroup.DELETE("/:id", patientController.Delete)
+		patientGroup.POST("", authKeys.Validate, patientController.Create)
+		patientGroup.PUT("/:id", authKeys.Validate, patientController.Update)
+		patientGroup.PATCH("/:id", authKeys.Validate, patientController.Patch)
+		patientGroup.DELETE("/:id", authKeys.Validate, patientController.Delete)
 	}
 
 	appointmentGroup := baseGroup.Group("/appointments")
@@ -145,10 +162,10 @@ func main() {
 		appointmentGroup.GET("", appointmentController.GetAll)
 		appointmentGroup.GET("/:id", appointmentController.GetById)
 		appointmentGroup.GET("/q", appointmentController.GetByDNI)
-		appointmentGroup.POST("", appointmentController.Create)
-		appointmentGroup.PUT("/:id", appointmentController.Update)
-		appointmentGroup.PATCH("/:id", appointmentController.Patch)
-		appointmentGroup.DELETE("/:id", appointmentController.Delete)
+		appointmentGroup.POST("", authKeys.Validate, appointmentController.Create)
+		appointmentGroup.PUT("/:id", authKeys.Validate, appointmentController.Update)
+		appointmentGroup.PATCH("/:id", authKeys.Validate, appointmentController.Patch)
+		appointmentGroup.DELETE("/:id", authKeys.Validate, appointmentController.Delete)
 
 	}
 
